Roles name alignment fix on user management page  [https://github.com/gocd/gocd/issues/6221]

--- a/server/webapp/WEB-INF/rails/webpack/views/pages/users/index.scss
+++ b/server/webapp/WEB-INF/rails/webpack/views/pages/users/index.scss
@@ -206,7 +206,7 @@ $selected-table-row: #e2f7fa;
 
 .table-row {
   border-bottom: 1px solid $border-color;
-  height:        45px;
+  min-height:        45px;
   display:       flex;
   align-items:   center;
   width:         100%;
